waitForElement described and (mostly) tested
